# nixpkgs

./: rpath.bad.txt
tools/rpath-debug/: README.md  run-probe.sh  run-saxpy.sh
tools/rpath-debug/probe/: CMakeLists.txt  main.c  shim.c
